welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var l:Int = 0;
var p:Int = 0;
getMondeHauteur = l;
getMondeLargeur = p;
var T = new Array[Color](l);
for (i <- 0 to l-1)
{
	getCouleurSol = T[i];
	avance();
}
gauche();
avance();
droite();
avance();
for (c <- 1 to p)
{
	
}
}
